# te-shader-play

./: .gitignore  Cargo.toml  README.md
shaders/: grid.wgsl  shader.wgsl
src/: event_handling.rs  imgui_state.rs  main.rs  rendering.rs  state.rs
src/imgui_state/: uniform_types.rs
src/imgui_state/uniform_types/: matrix.rs  scalar.rs  transform.rs  vec.rs
