[package]
name = "te-shader-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { git = "https://github.com/Calcoph/te-wgpu", rev = "6bb30b0" }
winit = { version = "0.29.10" }
pollster = "0.3"
imgui = { version = "0.11", features = ["docking"] }
imgui-winit-support = "0.11"
imgui-wgpu = "0.24"
mint = "0.5.9"
cgmath = "0.18.0"

[patch.crates-io]
imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-wgpu = { git = "https://github.com/Calcoph/imgui-wgpu-rs", rev = "0917255" }
