[package]
name = "te-shader-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { git = "https://github.com/Calcoph/te-wgpu", rev = "05e95d973bbe7ff0916bd80d657de941f85b3df7", features = ["skip_check_buffer_bounds"]}
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
pollster = "0.4"
imgui = { version = "0.12", features = ["docking"] }
imgui-winit-support = "0.13"
imgui-wgpu = "0.25"
mint = "0.5.9"
cgmath = "0.18.0"
env_logger = "0.11"
serde_json = "1.0"

[patch.crates-io]
imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-wgpu = { git = "https://github.com/Calcoph/imgui-wgpu-rs", rev = "d079e37979f1ba67ad5cd51b81b2670a0bc0a215" }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-winit-support" }
